# z2p-web-axum

./: Cargo.toml  Dockerfile  README.md  spec.yaml
configuration/: base.yaml
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: blog.rs  login.rs  newsletters.rs  reviews.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.rs
src/routes/login/: get.rs  login.html  post.rs
templates/: confirmation_email.html
tests/api/: helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
